# Calculational

./: .quant.hs.swp  Calculational.cabal  LICENSE  README.md  calculational.cabal  package.yaml  stack.yaml
doc/: createPdf.sh  template.latex
examples/: Examples.hs
src/: Calculational.hs
src/Calculational/: Definitions.hs  Lexer.hs  MonoidExt.hs  Parser.hs  QuasiQuoter.hs
tests/: CalculationalSpec.hs  tests.hs
