name:              calculational
version:           0.0.1
license:           MIT
license-file:      LICENSE
author:            Francisco Cháves
maintainer:        Francisco Cháves
synopsis:          Quantifiers, Lists, Sets in a Dijkstra style.
description:       I implement a Dijkstra style notation for quantifiers, 
                   lists, sets and expressions that can be evaluated.
                   The library could reference haskell variables. 
                   The expresions are translated using quasiquotes 
                   and template-haskell. I used the library to show some 
                   concepts of applied logic and discrete math courses for
                   Computer and Systems engineering students.  
category:          Calculational, DSL, Mathematics.
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple

source-repository head
  type:     git
  location: https://github.com/pachopepe/Calculational.git

library
  build-depends:      base >= 4 && < 5,
                      mtl >= 2 && < 3,
                      parsec >= 3 && < 4,
                      syb >= 0 && < 1,
                      template-haskell >= 2 && < 3,
                      multiset >= 0.2.2 && < 1,
                      containers >= 0 && < 1,
                      ghc-prim >= 0.3 && < 0.4, 
                      QuickCheck >= 2.0 && < 3                     
  exposed-modules:    Calculational.MonoidExt
                      Calculational.Definitions
                      Calculational
  other-modules:      Calculational.Parser
                      Calculational.QuasiQuoter
                      Calculational.Lexer
  hs-source-dirs:     src
  extensions:         DoAndIfThenElse

test-suite tests
  hs-source-dirs: tests
  main-is: tests.hs
  Type: exitcode-stdio-1.0
  build-depends:       base >= 4 && < 5,
                       calculational == 0.*,
                       QuickCheck >= 2 && < 3,
                       test-framework >= 0 && < 1,
                       test-framework-quickcheck2 >= 0 && < 1, 
                       containers >= 0 && < 1,
                       multiset >= 0.2.2 && < 1

